# prodeko-org-djangocms

./: .dockerignore  .eslintignore  .eslintrc  .eslintrc.js  .flake8  .gitattributes  .gitignore  .pylintrc  .stylelintrc  Dockerfile  README.md  bootstrap.sh  data.json  deploy.sh  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  variables.txt
.github/workflows/: codeql-analysis.yml  deploy.yml  test.yml  workflow.yml
abisivut/: apps.py  cms_apps.py  urls.py  views.py
abisivut/templates/: abit-banner.html  abit-base.html  abit-footer.html  abit-nav.html  abit.html  base-abit.html
alumnirekisteri/: README.md  Rekisteriseloste.docx  bootstrap.sh  manage.py  old_data_migrator.py  requirements.txt  urls.py
alumnirekisteri/alumnirekisteri/: urls.py
alumnirekisteri/auth2/: admin.py  forms.py  models.py
alumnirekisteri/rekisteri/: __init__.py  admin.py  apps.py  forms.py  initialise.py  models.py  routers.py  serializers.py  urls.py  views.py  views_api.py
auth_prodeko/: __init__.py  admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
auth_prodeko/migrations/: 0001_init.py  0001_initial.py  0002_first_name_length.py  0002_user_has_accepted_policies.py  0003_auto_20190119_1930.py  0003_auto_20190602_2042.py  0003_user_person.py
auth_prodeko/templates/: login_base.html  login_title.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  password_reset_html_email.html  prodeko_login.html
documentation/: analytics.md  app_apply_for_membership.md  app_poytakirjat.md  app_toimarit.md  emailit.md  file_hosting.md
infrastructure/: README.md  deploy.sh  parameters.json  template.json
lifelonglearning/: __init__.py  apps.py  cms_apps.py  models.py  settings.py  urls.py  views.py  wsgi.py
lifelonglearning/migrations/: 0001_initial.py  0002_auto_20180823_0012.py  0002_auto_20190706_1508.py  0003_auto_20180920_2020.py
lifelonglearning/templates/: base-LLL.html  base.html  coursepage.html  lifelonglearning.html  lll-banner.html  lll-base.html  lll-footer.html  lll-nav.html
prodekoorg/: asgi.py  custom_azure.py  routers.py  settings.py  settings_dev.py  settings_prod.py  urls.py  variables.sample.txt  variables.txt  views.py  wsgi.py
prodekoorg/app_apply_for_membership/: __init__.py  admin.py  apps.py  cms_apps.py  constants.py  forms.py  groups_api.py  models.py  signals.py  urls.py  views.py
prodekoorg/app_contact/: __init__.py  admin.py  apps.py  cms_apps.py  forms.py  models.py  views.py
prodekoorg/app_infoscreen/: __init__.py  admin.py  apps.py  models.py  urls.py  views_api.py
prodekoorg/app_kiltiskamera/: __init__.py  apps.py  cms_apps.py  views.py
prodekoorg/app_kulukorvaus/: __init__.py  admin.py  apps.py  cms_apps.py  forms.py  models.py  printing.py  tests.py  urls.py  views.py
prodekoorg/app_membership/: __init__.py  admin.py  apps.py  cms_apps.py  forms.py  groups_api.py  mailchimp_api.py  models.py  signals.py  views.py  views_api.py
prodekoorg/app_oauth/: __init__.py  apps.py  serializers.py  urls.py  views.py
prodekoorg/app_poytakirjat/: README.md  __init__.py  admin.py  apps.py  cms_apps.py  constants.py  gdrive_api.py  models.py  urls.py  views.py
prodekoorg/app_proleko/: __init__.py  admin.py  apps.py  cms_apps.py  models.py  views.py
prodekoorg/app_tapahtumat/: __init__.py  admin.py  apps.py  cms_apps.py  gcalendar_api.py  gdrive_api.py  models.py  views.py
prodekoorg/app_tiedostot/: __init__.py  admin.py  apps.py  cms_apps.py  models.py  urls.py  views.py
prodekoorg/app_toimarit/: __init__.py  admin.py  apps.py  cms_apps.py  models.py  views.py
prodekoorg/app_utils/: __init__.py  admin.py  apps.py  signals.py
prodekoorg/app_vaalit/: __init__.py  admin.py  apps.py  cms_apps.py  forms.py  generate_users.sh  models.py  urls.py  views.py
prodekoorg/settings/: base.py  dev.py  prod.py  variables.sample.txt  variables.sample.txt.txt
prodekoorg/templates/: 403.html  404.html  500.html  base-gallery.html  base.html  breadcrumb.html  content-page-twocol6-6.html  content-page-twocol8-4.html  content-page.html  footer.html  frontpage.html  fullwidth.html  navbar.html
prodekoorg/templatetags/: common_tags.py  prodekoorg_tags.py
scripts/: migrate_ar_data.py
seminaari/: apps.py  cms_apps.py  urls.py  views.py
seminaari/templates/: base-seminaari.html  seminaari.html
tiedotteet/: README.md  apps.py  requirements.txt
tiedotteet/Tiedotteet/: settings.py  urls.py  wsgi.py
tiedotteet/backend/: __init__.py  admin.py  apps.py  cms_apps.py  forms.py  models.py  urls.py  views.py  views_api.py
tiedotteet/client/: .babelrc  package-lock.json  package.json  webpack.config.js
tiedotteet/docs/: how-to-install.md
tiedotteet/frontend/: .eslintrc  package-lock.json  package.json  webpack.config.js
tiedotteet/info/: admin.py  forms.py  models.py  views.py  views_api.py
tiedotteet/migrations/: 0001_initial.py  0002_auto_20180316_2032.py  0002_auto_20180605_1648.py  0002_auto_20180605_1717.py  0002_auto_20180814_1553.py  0002_auto_20180830_0454.py  (+57 more)
(+645 files in other folders)
