[project]
name = "prodeko-org-djangocms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astroid>=3.3.11",
    "attrs>=25.3.0",
    "azure-common>=1.1.28",
    "azure-storage-blob>=12.26.0",
    "beautifulsoup4>=4.13.5",
    "cachetools>=5.5.2",
    "chardet>=5.2.0",
    "django>=5.2.5",
    "django-appconf>=1.0.4",
    "django-audit-log==0.7.0",
    "django-ckeditor>=6.7.3",
    "django-classy-tags>=4.1.0",
    "django-cms>=3.11,<4",
    "django-compressor>=4.5.1",
    "django-cors-headers>=4.7.0",
    "django-debug-toolbar>=5.2.0,<6",
    "django-filer>=3.3.2",
    "django-filter>=25.1",
    "django-formtools>=2.5.1",
    "django-js-asset>=3.1.2",
    "django-mptt>=0.18.0",
    "django-oauth-toolkit>=3.0.1",
    "django-pipeline>=4.0.0",
    "django-polymorphic>=4.1.0",
    "django-redis>=6.0.0",
    "django-sass-processor>=1.4.2",
    "django-sekizai>=4.1.0",
    "django-storages>=1.14.6",
    "django-treebeard>=4.7.1",
    "djangocms-admin-style>=3.3.1",
    "djangocms-attributes-field>=4.1.1",
    "djangocms-bootstrap4>=3.0.2",
    "djangocms-column>=2.1.0",
    "djangocms-file>=3.0.1",
    "djangocms-icon>=2.1.0",
    "djangocms-link>=4,<5",
    "djangocms-picture>=4.1.1",
    "djangocms-snippet>=5.0.1",
    "djangocms-style>=3.1.0",
    "djangocms-text-ckeditor>=5.1.7",
    "djangocms-video>=3.1.0",
    "djangorestframework>=3.16.1",
    "easy-thumbnails>=2.10.1",
    "google-api-core>=2.25.1",
    "google-api-python-client>=2.181.0",
    "google-auth-oauthlib>=1.2.2",
    "gunicorn>=23.0.0",
    "html5lib==1.1",
    "libsass>=0.23.0",
    "lxml>=6.0.1",
    "mailchimp-marketing==3.0.80",
    "markdown>=3.8.2",
    "oauthlib>=3.3.1",
    "pillow>=11.3.0",
    "protobuf>=6.32.0",
    "psycopg2-binary>=2.9.10",
    "pypdf2==3.0.1",
    "pytz>=2025.2",
    "qrcode>=8.2",
    "reportlab>=4.4.3",
    "requests>=2.32.5",
    "sentry-sdk>=2.35.2",
    "six>=1.17.0",
    "stripe>=12.5.0",
    "unicodecsv==0.14.1",
    "unidecode>=1.4.0",
    "uritemplate>=4.2.0",
    "uvicorn>=0.35.0",
]

[tool.black]
exclude = '''
    \.git
  | locale
  | documentation
  | ^.*\/migrations\/.*$
  | ^.*\/node_modules\/.*$
'''

#[tool.curlylint.rules]
#aria_role = true
#django_forms_rendering = true
#html_has_lang = true
#image_alt = true
#indent = 2
#meta_viewport = true
#no_autofocus = true
#tabindex_no_positive = true

[dependency-groups]
dev = [
    "attrs>=25.3.0",
    "black>=25.1.0",
    "django-debug-toolbar>=5.2.0,<6",
    "pylint>=3.3.8",
    "pylint-django>=2.6.1",
    "pytest-cov>=6.2.1",
    "pytest-django>=4.11.1",
    "pytest-xdist>=3.8.0",
]
